CSS/media.css
/* For screens above 600px show these backgrounds and remove collapsible menu */
@media only screen and (min-width: 600px) {

  #landing-background {
    background: url(/Content/Web_Final_Col.jpg);
    background-size: cover;
  }

  #aboutme-background {
    background: url(/Content/Web_Final_Col.jpg);
    background-size: cover;
  }

  .collapsible-menu {
    display: none;
  }

}

/* Adding shadow to standard normal bar to make sure it isn't hidden in the background when on smaller screens that creates overlap */
@media only screen and (max-width: 1400px) {

  nav ul li a {
    text-shadow: .5px .5px .5px #EEE9E4;
    color: #493A37;
  }

  nav ul li a:hover {
    color: white;
    -webkit-transition: background 0.3s ease-in-out;
    -moz-transition: background 0.3s ease-in-out;
    transition: background-color 0.3s ease-in-out;
  }
}

/* Controlling image overflow on details thumbnails */
@media only screen and (max-width: 1500px) {
  #details-box {
    display: none;
  }
}

/* Controlling overflow of text and images and blog, portfolio and about pages */
@media only screen and (max-width: 1125px) {
  .blog {
    width: 95%;
    border: none;
    border-bottom: 1px solid black;
  }

  .blog img {
    width: 400px;
    height: auto;
  }

  .details {
    font-size: 12px;
  }

  #about {
    height: 80%;
    width: 50%;
    overflow: auto;
  }

  #details-box {
    display: none;
  }

}

/* Tablet/Small laptop screen sizes */
/* Controlling overflow on portfolio page and about page */
@media only screen and (max-width: 850px) {

  a.heading {
    font-size: 90%;
  }

  .details {
    font-size: 10px;
  }

  #about {
    height: 80%;
    width: 60%;
    overflow: auto;
  }
}

/* Mobile screen size */
/* Detailed descriptions below */
@media only screen and (max-width: 600px) {

  /* Hiding my base nav bar inplace of my mobile nav  */
  #hide-std-menu {
    display: none;
  }

  /* Background image change for mobile screen */
  #landing-background {
    background: url(/Content/Web_Final_Col_Mob.jpg);
    background-size: cover;
  }

  /* Navigation bar changes for pages other than index.html */
  nav {
    justify-content: space-evenly;
    justify-items: center;
    font-size: 15px;
  }

  nav ul li a {
    margin: 10px;
    color: #493A37;
  }

  nav ul li a:hover {
    color: white;
    background: white;
    -webkit-transition: background 0.3s ease-in-out;
    -moz-transition: background 0.3s ease-in-out;
    transition: background-color 0.3s ease-in-out;
  }

  /* Removal of margin on floating text changing it's hover location */
  .floating-text {
    margin: 0;
  }

  /* Font size for floating text and new positioning */
  .floating-text h1 {
    margin-top: 60%;
    font-size: 60px;
  }

  /* Font size for floating text h3 */
  .floating-text h3 {
    font-size: 25px;
  }

  /* Background image change for mobile on about me page */
  #aboutme-background {
    background: url(/Content/Web_Background.png);
  }

  /* Handing text overflow on about me page */
  #about {
    height: 80%;
    width: 100%;
    overflow: auto;
  }

  /* Handing grid size and text overflow on portfolio page */
  .grid {
    height: 100%;
  }

  a.heading {
    font-size: 80%;
  }

  a.heading span {
    font-size: 90%;
  }

  .details {
    font-size: 7px;
  }

  /* Handing text and image overflow on blog page */
  .blog {
    width: 95%;
    border: none;
    border-bottom: 1px solid black;
  }

  .blog img {
    width: 330px;
    height: auto;
  }

  /* Raising footer on certain pages to be visable instead of been hidden under buttons that are typically displayed on mobiles */
  #foot-mob {
    margin-bottom: 80px;
  }
  
}

